# simple-comic-reader

./: .gitignore  README.md  README.ru_RU.md  README.zh_CN.md  build.bat  cvhelp.py  lib_cr.py  lib_cr_p.py  pyproject.toml  reader.py  ui_strings.py
